--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button
-                type="button"
-                class="navbar-toggle"
-                (click)="collapsed = !collapsed"
-            >
+            <button type="button" class="navbar-toggle" (click)="collapsed = !collapsed">
                 <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
             </button>
             <a href="#" class="navbar-brand">Recipe Book</a>
@@ -18,10 +14,9 @@
         >
             <ul class="nav navbar-nav">
                 <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
-                <li></li>
-                <a href="#" (click)="onSelect('shopping-list')"
-                    >Shopping List</a
-                >
+                <li>
+                    <a href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" appDropdown>
