--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -25,8 +25,8 @@
                         >Add To Shopping List</a
                     >
                 </li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
+                <li><a style="cursor: pointer;">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
@@ -43,6 +43,5 @@
                 {{ ingredient.name }} - {{ ingredient.amount }}
             </li>
         </ul>
-        >
     </div>
 </div>
